Add default set option when empty and fix nullpointer POD