@@ -8,18 +8,24 @@ import com.vtesdecks.cache.indexable.proxy.ProxyCardOption;
 import com.vtesdecks.model.api.ApiProxyCard;
 import com.vtesdecks.model.api.ApiProxyCardOption;
 import com.vtesdecks.service.ProxyService;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.time.LocalDate;
+import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Objects;
 
+@Slf4j
 @Service
 public class ApiProxyService {
 
-    private static final Set PROMO_SET = Set.builder().fullName("Promo").releaseDate(LocalDate.MIN).build();
+    private static final Set PROMO_SET = Set.builder().abbrev("Promo").fullName("Promo").releaseDate(LocalDate.MIN).build();
+    private static final Set POD_SET = Set.builder().abbrev("POD").fullName("Print On Demand").releaseDate(LocalDate.MIN).build();
 
     @Autowired
     private ProxyService proxyService;
@@ -31,27 +37,51 @@ public class ApiProxyService {
     private SetCache setCache;
 
     public byte[] generatePDF(List<ApiProxyCard> cards) throws IOException, DocumentException {
-        return proxyService.generatePDF(cards);
+        Map<Integer, List<ApiProxyCardOption>> cardOptions = new HashMap<>();
+        for (ApiProxyCard card : cards) {
+            List<ApiProxyCardOption> options = getProxyOptions(card.getCardId());
+            if (options != null) {
+                cardOptions.put(card.getCardId(), options);
+            }
+        }
+        return proxyService.generatePDF(cards, cardOptions);
     }
 
-    public List<ApiProxyCardOption> getProxyOptions(Integer cardId){
+    public List<ApiProxyCardOption> getProxyOptions(Integer cardId) {
         return cardOptionCache.get(cardId).stream()
                 .map(this::map)
-                .collect(Collectors.toList());
+                .filter(Objects::nonNull)
+                .sorted(Comparator.comparing(ApiProxyCardOption::getSetReleaseDate).reversed())
+                .toList();
     }
 
-    private ApiProxyCardOption map(ProxyCardOption proxyCardOption){
-        Set set = isPromoSet(proxyCardOption) ? PROMO_SET : setCache.get(proxyCardOption.getSetAbbrev());
+    private ApiProxyCardOption map(ProxyCardOption proxyCardOption) {
+        Set set;
+        if (isPodSet(proxyCardOption)) {
+            set = POD_SET;
+        } else if (isPromoSet(proxyCardOption)) {
+            set = PROMO_SET;
+        } else {
+            set = setCache.get(proxyCardOption.getSetAbbrev());
+        }
+        if (set == null) {
+            log.warn("Set '{}' not found for proxy option", proxyCardOption.getSetAbbrev());
+            return null;
+        }
         return ApiProxyCardOption.builder()
                 .cardId(proxyCardOption.getCardId())
                 .setAbbrev(set.getAbbrev())
                 .setReleaseDate(set.getReleaseDate())
                 .setName(set.getFullName())
-                .imageUrl(ProxyService.getImageUrl(set.getAbbrev(), proxyCardOption.getCardId()))
+                .imageUrl(ProxyService.getImageUrl(set.getAbbrev(), proxyCardOption.getCardId(), null))
                 .build();
     }
 
-    private boolean isPromoSet(ProxyCardOption proxyCardOption){
+    private boolean isPodSet(ProxyCardOption proxyCardOption) {
+        return "POD".equals(proxyCardOption.getSetAbbrev());
+    }
+
+    private boolean isPromoSet(ProxyCardOption proxyCardOption) {
         return "Promo".equals(proxyCardOption.getSetAbbrev());
     }
 }
